--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PoetRebuild</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  <title>Poet Image Description</title>
+  <%= stylesheet_link_tag :all %>
+  <%= javascript_include_tag :defaults %>
+
+  <%= csrf_meta_tag %>
+  <% if ENV['POET_HOST'] == 'diagram-center.herokuapp.com' %>
+    <%= raw render_ga('UA-36104449-1') %>
+  <% elsif ENV['POET_HOST'] == 'diagram.herokuapp.com' %>
+    <%= raw render_ga('UA-36099695-1') %>
+  <% end %>
+  
 </head>
-<body>
 
-<%= yield %>
+  <body class="index admin_books logged_in">
+     <div id="header-wrap">
+       <div id="header">
+         <h1 id="site_title"><a title="Poet, version <%= t(:version)%>, home page" href="/">Poet Image Description</a></h1>
+         <ul class="tabbed_navigation" id="tabs">
+           <li>
+           <%# <% if current_user %>
+           <%#  <%= form_for :search, :url => dynamic_descriptions_search_path, :html => { :style => 'background:none;border:0;display:inline;', :method => :get } do |f|%>
+           <%#     <%= f.label :term,  'Search Descriptions:', options={:style=>"color:white;"}  %>
+           <%#     <%= f.text_field :term, options={:style=> "width: 100px;"} %>
+           <%#     <%= f.submit "Go" %>
+           <%#  <% end %>
+           <%#<% end %>
+           </li>
+          
+          <li><%= link_to "Guidelines", edit_book_description_guidance_path %> </li>
+          <li><%= link_to "Help", edit_book_help_path %> </li>
+          
+         </ul>
+       </div>
+     </div>
 
-</body>
+       <%= render "shared/error_display" %>
+       <%= yield %>
+
+   <div id="poet_footer" class="poet_footer"> <!-- TODO -- footer font smaller !-->
+    <p><strong>Legal Disclaimer</strong>: The Poet tool is intended to assist in the creation of accessible content. Use of the Poet tool is limited to activities for creating content that comply with applicable copyright law and contractual agreements. By using this tool, you accept all provisions contained in the <%= link_to('Terms of Use', user_terms_of_service_path, :target => '_blank' ) %>. If you do not wish to be bound by the provisions contained in the Terms of Use, do not use the Poet tool.</p>
+    <p>Copyright &copy; 2012 <a href="http://www.benetech.org">Benetech</a>.</p>
+   </div>
+     
+   </body>    
+  
 </html>
+
+ 
