--- a/app/views/upload_book/upload.html.erb
+++ b/app/views/upload_book/upload.html.erb
@@ -44,7 +44,7 @@
 						<p>
 							After the process completes, you will need to remember the code displayed and follow the instructions.
 						</p>
-						<p><%= submit_tag "Upload", :class => "btn btn-primary", :disabled => true, :id => "upload" %></p>
+						<p><%= submit_tag "Upload", :class => "btn btn-primary", :id => "upload" %></p>
 					</li>
 				</ol>
 			</div>
