--- a/app/views/shared/_error_display.html.erb
+++ b/app/views/shared/_error_display.html.erb
@@ -1,8 +1,12 @@
-    <div style="margin: auto; width:640px; padding: 10px;">
-        <% if (flash.alert) %>
-        <div style="margin: auto; text-align: center; font-weight: bold; color:red; padding: 5px; border-width: 4px; border-style: ridge; border-color: yellow;" ><%= flash.alert %></div>
-        <% end %>
-        <% if (flash.notice) %>
-        <div style="margin: auto; text-align: center; font-weight: bold; color:green; padding: 5px; border-width: 4px; border-style: ridge; border-color: green;" ><%= flash.notice %></div>
-        <% end %>
+
+<% if (flash.alert) %>
+	<div style="margin: auto; width:640px; padding: 10px;">
+    	<div style="margin: auto; text-align: center; font-weight: bold; color:red; padding: 5px; border-width: 4px; border-style: ridge; border-color: yellow;" ><%= flash.alert %></div>
     </div>
+<% end %>
+<% if (flash.notice) %>
+	<div style="margin: auto; width:640px; padding: 10px;">
+		<div style="margin: auto; text-align: center; font-weight: bold; color:green; padding: 5px; border-width: 4px; border-style: ridge; border-color: green;" ><%= flash.notice %></div>
+	</div>
+<% end %>
+    
